--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,3 +506,5 @@ i.main-menu__list-item--icon-active{
 .info3-content__body-feedback-img{
     width: 100%;
 }
+
+/* --------------------------------------------- MENU ---------------------------------------------------------- */
