--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,6 +485,7 @@ i.main-menu__list-item--icon-active{
 
 
 .info3-content__body-banner{ 
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -514,4 +515,94 @@ i.main-menu__list-item--icon-active{
     color: var(--text-color);
     text-align: center;
     margin: 100px 0px 100px;
+}
+
+/* --------------------------------------------- SALE ---------------------------------------------------------- */
+
+.sale-content__body{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.sale-body__list{
+    list-style: none;
+    padding-left: 0;
+}
+
+.sale-body__item{
+    display: flex;
+    margin-top: 40px;
+
+}
+
+.sale-body__item--img-box{
+    width: 35%;
+}
+
+.sale-body__item--img{
+    width: 100%;
+    object-fit: contain;
+}
+
+.sale-body__item--content-box{
+    width: 65%;
+    margin-left: 60px;
+}
+
+.sale-body__item--heading{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.sale-body__item--heading:hover{
+    text-decoration: underline;
+}
+
+.sale-body__item--desc{
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 20px;
+}
+
+/* --------------------------------------------- BLOG ---------------------------------------------------------- */
+.blog3__content-body{
+    margin-top: 40px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.blog3__body--list{
+    padding-left: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.blog3__body--item{
+    width: 200px;
+    text-align: center;
+}
+
+.blog3__body--item--img-box{
+    width: 100%;
+}
+
+.blog3__body--item--img{
+    width: 100%;
+}
+
+.blog3__body--item-label{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.blog3__banner{
+    margin-top: 40px;
+}
+
+.blog3__banner--img{
+    width: 100%;
 }
