--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -382,7 +382,7 @@ html{
 
 .base-blog__item:nth-child(2n){
     flex-direction: row-reverse;   /*Đảo ngược vị trí của các phần tử ở thứ tự chẵn*/
-} 
+}
 
 .base-blog__item:last-child{
     margin-bottom: 0;
@@ -413,6 +413,11 @@ html{
 .base-blog__item--content-box{
     margin-left: 40px;
     width: 65%;
+}
+
+.base-blog__item:nth-child(2n) .base-blog__item--content-box{
+    margin-left: 0;
+    margin-right: 40px;
 }
 
 .base-blog__item--content-heading{
